sass/screen.scss
/* Welcome to Compass.
 * In this file you should write your main styles. (or centralize your imports)
 * Import this file using the following HTML or equivalent:
 * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */

@import "compass/reset";
@import "compass";
@import "pygments.fruity";

@mixin centered-content {
  @media screen and (max-width: 623px) {
    margin-left: 6px; margin-right: 6px;
  }
  @media screen and (min-width: 624px) {
    width: 600px;
    margin-right: auto;
    margin-left: auto;
  }
  @media screen and (min-width: 800px) {
    width: 750px;
  }
}

////////////////////
// Fonts
@font-face {
  font-family: 'liberation_serifregular';
  src: url('../fonts/LiberationSerif-Regular-webfont.eot');
  src: url('../fonts/LiberationSerif-Regular-webfont.eot?#iefix') format('embedded-opentype'),
       url('../fonts/LiberationSerif-Regular-webfont.woff') format('woff'),
       url('../fonts/LiberationSerif-Regular-webfont.ttf') format('truetype'),
       url('../fonts/LiberationSerif-Regular-webfont.svg#liberation_serifregular') format('svg');
}

/////////////////////
// Typography
html { font-family: 'liberation_serifregular'; font-size: 16px; line-height: 24px; color: #333; }
body { overflow-x: hidden; }

h1 { font-size: 40px; line-height: 48px; margin: 6px 0; font-weight: bold; color: #000; @include centered-content; }
h2 { font-size: 30px; line-height: 36px; margin: 36px 0 6px 0; font-weight: bold; color: #000; @include centered-content; }
h3 { font-size: 24px; line-height: 30px; margin: 3px 0; font-weight: bold; color: #000; @include centered-content; }
h4 { font-size: 20px; font-weight: bold; color: #000; @include centered-content; }
h5 { font-weight: bold; color: #000; @include centered-content; }
h6 { font-variant: small-caps; color: #000; @include centered-content; }

a { text-decoration: none; color: #1a1afa; }
a:link:hover, a:hover { color: #4c4cfa; }
a:visited { color: #4c4cfa; }
a:visited:hover { color: #1a1afa; }
a:active { color: #f66; }

ul, ol { padding-left: 30px; }
ul ul, ol ol, ul ol, ol ul { padding-left: 0; }

strong { font-weight: 600; }
em { font-style: italic; }
datetime { color:#666; font-size:smaller; } 

.highlight { background-color: #333; margin-bottom: 24px; }
code { font-family: monospace;  }
pre code { @include centered-content; display: block; color: white; padding: 6px 0 6px 1em; word-wrap: break-word; white-space: pre-wrap; font-size: 14px; }
li code, p code { color:#aaa; }

blockquote { background-color: #ddd; padding:24px 0 12px 0; margin-bottom:24px; }
blockquote + h2,
blockquote + h3,
blockquote + h4,
blockquote + h5,
blockquote + h6 { padding-top: 24px; }

.video { @include centered-content; display:block; margin-bottom: 24px; background-color:#333; }
.responsive-image {
	display: inline;
	img { display: block; width: 100%; height: auto !important; }
}

////////////////////////////////
// Layout

// Site Header
#header, #site-footer {
  background: url('../img/header.jpg') repeat-x; height: 36px;

  #logo img { height: 24px; width: auto; margin: 6px; float: left; }
  p, h2#site-title { margin: 0; color: white; text-shadow: 1px 1px black; width: auto; }
  h2#site-title { font-size: 24px; line-height: 36px; float: left;  }
  p { @include centered-content;  font-size: 12px;  line-height:36px; }
}

#site-footer { margin-top: 24px; }

// Article
.node-article {

  .article-header {
    margin-bottom: 12px; background: black url(/img/spotlight-on-green-damask.jpg) center;

    h1 { @include centered-content; color:white; padding-top: 18px; margin-top:0; }
    datetime { display: block; @include centered-content; padding-bottom: 30px; color:#eee; }
  }

  .article-body {
    padding-bottom: 60px;

    ul, ol, p, table { margin-bottom: 1em; @include centered-content; }

    ul ul, ul ol, ol ol, ol ul { margin-bottom: 0; }
    ul li, ol li { margin-left: 1.2em; }
    ul { list-style: outside square; }
    ol { list-style: outside decimal; }

    table, td { border:2px solid #ccc; }
    th { background-color: #ccc; }
    th, td { text-align: left; padding:2px; }
  }

  .article-footer {
    margin: 0 -12px;

    .article-call-to-action {
      text-align: center; padding: 12px; margin-bottom: 24px; background-color: #ddd;

      a.primary-cta {
      	display: block; 
      	margin:24px auto;
      	color:white;
      	border-radius: 6px;
      	width: 200px;
      	text-decoration: none;
      	background-color: #7db9e8;
      	@include filter-gradient(#7db9e8, #1e5799, vertical);
      	@include background-image(linear-gradient(top,  #7db9e8 0%,#2989d8 50%,#1e5799 100%)); 
      	-webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.75);
      	-moz-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.75); 
      	box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.75); }
      	
        .primary-cta strong { display: block; font-size: 27px; line-height: 36px; text-shadow: 2px 2px #333; }
    }

    .comments { 
      @include centered-content;
      h2, #disqus_thread { max-width:95%; margin-right:15px; margin-left: 15px; }
    }

    #related-posts {
      @include centered-content;
      margin-bottom: 48px; 
      ul { list-style: square outside; }
    }
  }
}

//////////////////////////////
// Named pages - custom layout
#home {
  h1 { font-size:60px; line-height:72px; }

  #site-mission {
    margin-top: -4px; padding:12px 0; background: black url(/img/spotlight-on-green-damask.jpg) center;
    h1, p { color:white; @include centered-content; }
  }

  #main-content {
    @include centered-content;
    article { margin: 30px 0; }
    datetime { padding-bottom: 0; color:#999; }
    .pagination { margin: 60px auto 0 auto; }
    .node-article .article-header { background:none; }
  }
}

///////////////////////////
// Media Queries
@media screen and (min-width: 450px) {
  html { font-size: 20px; line-height: 30px; }
}
@media screen and (min-width: 624px) {
	h1 { font-size: 72px; line-height: 84px; }
	h2 { font-size: 36px; line-height: 42px; }
  #home h1 { font-size:108px; line-height: 126px; }
	
	blockquote p { max-width: 500px; position: relative; left: 50px; }
	blockquote:before { display:block; @include centered-content; content:"\201C"; color:#999; font-size:10em; position:relative; top:0.3em; }
	
	.node-article { padding-right:0; padding-left:0; }
}
@media screen and (min-width: 800px) {
  ul, ol { padding-left: 50px; }
	blockquote p { max-width: 650px; }
}

